--- a/demos/ARMCM4-STM32F429-DISCOVERY-SDRAM/Makefile
+++ b/demos/ARMCM4-STM32F429-DISCOVERY-SDRAM/Makefile
@@ -86,6 +86,7 @@ CSRC = $(PORTSRC) \
        $(CHIBIOS)/os/various/shell.c \
        $(CHIBIOS)/os/various/chprintf.c \
        stmdrivers/stm32f429i_discovery_sdram.c stmdrivers/stm32f4xx_fmc.c \
+       usbcfg.c \
        main.c
 
 # C++ sources that can be compiled in ARM or THUMB mode depending on the global
