--- a/demos/ARMCM4-STM32F429-DISCOVERY-SDRAM/Makefile
+++ b/demos/ARMCM4-STM32F429-DISCOVERY-SDRAM/Makefile
@@ -5,7 +5,7 @@
 
 # Compiler options here.
 ifeq ($(USE_OPT),)
-  USE_OPT = -O0 -ggdb -fomit-frame-pointer -falign-functions=16 -fverbose-asm
+  USE_OPT = -O2 -ggdb -fomit-frame-pointer -falign-functions=16
 endif
 
 # C specific options here (added to USE_OPT).
@@ -73,8 +73,7 @@ include $(CHIBIOS)/os/kernel/kernel.mk
 include $(CHIBIOS)/test/test.mk
 
 # Define linker script file here
-#LDSCRIPT = $(PORTLD)/STM32F429xI.ld
-LDSCRIPT = ./STM32F429xI_segmented.ld
+LDSCRIPT= $(PORTLD)/STM32F429xI.ld
 
 # C sources that can be compiled in ARM or THUMB mode depending on the global
 # setting.
@@ -88,11 +87,7 @@ CSRC = $(PORTSRC) \
        $(CHIBIOS)/os/various/chprintf.c \
        stmdrivers/stm32f429i_discovery_sdram.c stmdrivers/stm32f4xx_fmc.c \
        usbcfg.c \
-       main.c \
-       wolf3d_palette.c \
-       ili9341.c \
-       res/wolf3d_vgagraph_chunk87.c \
-       # EOL
+       main.c
 
 # C++ sources that can be compiled in ARM or THUMB mode depending on the global
 # setting.
@@ -124,8 +119,7 @@ ASMSRC = $(PORTASM)
 INCDIR = $(PORTINC) $(KERNINC) $(TESTINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) \
          $(CHIBIOS)/os/various/devices_lib/accel \
-         $(CHIBIOS)/os/various \
-         # EOL
+         $(CHIBIOS)/os/various
 
 #
 # Project, sources and paths
